<resources>
    <string name="app_name">BSIS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">"Blood Safety Information System (BSIS) Mobile Version 1.1.3 "</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donated_list">Donated list</string>
    <string name="add_donor">Add Donor</string>
    <string name="add_donation">Add Donation</string>
    <string name="donors">Donors</string>
    <string name="communicate">Communicate</string>
    <string name="offline_mode">Offline mode</string>
    <string name="setting">Setting</string>
    <string name="donate">Donate</string>
    <string name="donation_batch">Donation batch</string>
    <string name="defferals">Defferals</string>
    <string name="donations">Donations</string>
    <string name="demographics">Demographics</string>
    <string name="overview">Overview</string>
    <string name="new_donor">New donor</string>
    <string name="find_donor">Find Donor</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="barcode">Barcode Reader</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="full_name">Full Name</string>
    <string name="venie">Venie</string>
    <string name="donor_number">Donor Number</string>
    <string name="save">Save</string>
    <string name="void_donor">Void Donor</string>
    <string name="ediit_donor">Ediit Donor</string>
    <string name="calling">Calling</string>
    <string name="middle_name">Middle Name</string>
    <string name="preferred_contact_type">Preferred Contact Type:</string>
    <string name="email">Email:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="province">Province:</string>
    <string name="preferred_address_type">Preferred Address Type:</string>
    <string name="city">City</string>
    <string name="work">Work:</string>
    <string name="country">Country:</string>
    <string name="mobile">Mobile</string>
    <string name="identifier">Identifier</string>
    <string name="donor_notes">Donor Notes:</string>
    <string name="edit_donor">Edit donor</string>
    <string name="hb">Hb:</string>
    <string name="donor_assessment">Donor Assessment</string>
    <string name="weight">Weight:</string>
    <string name="pulse">Pulse:</string>
    <string name="mmhg">mmHg</string>
    <string name="bp">BP:</string>
    <string name="bleed_times">Bleed Times</string>
    <string name="bpm">bpm</string>
    <string name="donation_information">Donation Information</string>
    <string name="manage_deferral">Manage Deferral</string>
    <string name="prefered_contact_type">Prefered Contact Type</string>
</resources>
