<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_dashboard"
        android:title="Home" />

    <item android:title="DONOR RECORDS">
        <menu>

            <item
                android:id="@+id/manage_donor_menu"
                android:icon="@drawable/ic_list"
                android:title="Manage Donors" />
        </menu>
    </item>

    <item android:title="DONOR CLINIC">
        <menu>
            <item
                android:id="@+id/donation_batches_menu"
                android:icon="@drawable/ic_list_black_"
                android:title="Manage Donation batches" />
        </menu>
    </item>



    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/offline"
                android:icon="@drawable/ic_offline"
                android:title="@string/offline_mode" />
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setting" />
        </menu>
    </item>


</menu>