<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activity.Donor_Detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/list_item_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@drawable/list_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/input_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/first_name"
                    android:inputType="textCapCharacters"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/input_middlename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/middle_name"
                    android:inputType="textCapCharacters"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/input_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/last_name"
                    android:inputType="textCapCharacters"
                    android:visibility="visible"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/input_calling"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:editable="false"
                    android:hint="@string/calling"
                    android:inputType="textEmailAddress"
                    android:saveEnabled="false"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/input_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/input_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:saveEnabled="false"
                    android:spinnerMode="dropdown"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/input_venue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:saveEnabled="false"
                    android:spinnerMode="dropdown"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/input_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:saveEnabled="false"
                    android:spinnerMode="dropdown"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/birth_calender_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/settingb"
                            android:text="Date of birth: 20/07.1990" />

                        <TextView
                            android:id="@+id/text_donor_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/donor_number" />
                    </LinearLayout>

                    <CalendarView
                        android:id="@+id/birthday_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/lostb"
                        android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.TabLayout
                    android:id="@+id/add_donor_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadeScrollbars="true"
                    android:isScrollContainer="true"
                    app:tabBackground="@color/lostb"
                    app:tabGravity="center"
                    app:tabIndicator="@color/white"
                    app:tabIndicatorAnimationDuration="100"
                    app:tabIndicatorColor="#FFCEE0FE"
                    app:tabIndicatorGravity="stretch"
                    app:tabInlineLabel="false"
                    app:tabMode="scrollable"
                    app:tabSelectedTextColor="@color/monsoon"
                    app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:tabTextColor="@color/apptext">

                    <android.support.design.widget.TabItem
                        android:id="@+id/overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/demographics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demographics" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/donations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donations" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/defferals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fadeScrollbars="false"
                        android:isScrollContainer="false"
                        android:scrollbarAlwaysDrawHorizontalTrack="false"
                        android:text="@string/defferals" />
                </android.support.design.widget.TabLayout>

            </android.support.design.widget.AppBarLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:scrollbarStyle="insideOverlay"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>


</ScrollView>

